Changes towards version 0.7:
- Game settings Quit menu now delegates to F10 quit (bug #462) - Alex
- Do not pause the game in places where not relevant (bug #984) - Alex
- Fixed crashes and potential weirdness when loading savegames from
  a Homeworld encounter screen (bug #997) - Alex
- Cleanup of GLOBAL(ShipStamp.frame) abuse; fixes bug #1054 - Alex
- Game attempts to exit cleanly under normal circustances (bug #52) - Alex
- Fixed Mmrnmhrm's X-Form transformation without energy use (bug #1004) - Alex
- Added missing sleeps in DoInput() functions (bug #893) - Alex
- Starmap unit conversion corrections; fixes bug #970 - Alex
- Rounding-error correction in log(x|y)ToUniverse (bug #1046), from Nic
- Change hardcoded Starbase and Sa-Matra values to pretty enum values
  (bug #1047), from Nic
- Load override.cfg from user's dir to add or override menu controls - Alex
- Allow addons to override any content by placing zips into their
  'shadow-content' dir - Alex
- Content reorg: font chars now use hexadecimal numbering - Alex
- Content reorg: some race comm and ships renamed, ship files renamed,
  many ani files renamed, new naming scheme for ani frames and voice - Alex
- .cfg files are now kept as subtrees of the resource map - Michael
- Flight control data no longer unnecessarily copied to config directory - Michael
- Index loading/saving now can operate on subtrees - Michael
- Videos vs. slide now controlled by a '3dovideo' addon - Michael
- New video resource type for 3DO videos - Michael
- Allow reaching 999.9:999.9 in HyperSpace (bug #628), from Nic
- Use system getopt_long() when available - SvdB
- Added --addondir commandline option - Mika
- Case insensitive matching when looking for .zip/.uqm/.rmp files - SvdB
- Added read-ahead buffering when reading zip index files. - SvdB
- Added support for packed ani and font files - Mika
- DrawTracedText abstraction (bug #1029), from Nic
- Experimental support for Symbian S60 3rd edition - Mika & SvdB