@@ -449,3 +449,175 @@ StreamDecoderTaskFunc (void *data)
 	return 0;
 }
 
+inline sint32
+readSoundSample (void *ptr, int sample_size)
+{
+	if (sample_size == sizeof (uint8))
+		return (*(uint8*)ptr - 128) << 8;
+	else
+		return *(sint16*)ptr;
+}
+
+// Graphs the current sound data for the oscilloscope.
+// Includes a rudimentary automatic gain control (AGC) to properly graph
+// the streams at different gain levels (based on running average).
+// We use AGC because different pieces of music and speech can easily be
+// at very different gain levels, because the game is moddable.
+int
+GraphForegroundStream (uint8 *data, sint32 width, sint32 height)
+{
+	int source_num;
+	TFB_SoundSource *source;
+	TFB_SoundDecoder *decoder;
+	int channels;
+	int sample_size;
+	int full_sample;
+	int step;
+	long played_time;
+	long delta;
+	uint8 *sbuffer;
+	unsigned long pos;
+	int scale;
+	sint32 i;
+	// AGC variables
+#define DEF_PAGE_MAX    28000
+#define AGC_PAGE_COUNT  16
+	static int page_sum = DEF_PAGE_MAX * AGC_PAGE_COUNT;
+	static int pages[AGC_PAGE_COUNT] =
+	{
+		DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX,
+		DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX,
+		DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX,
+		DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX, DEF_PAGE_MAX,
+	};
+	static int page_head;
+#define AGC_FRAME_COUNT  8
+	static int frame_sum;
+	static int frames;
+	static int avg_amp = DEF_PAGE_MAX; // running amplitude (sort of) average
+	int target_amp;
+	int max_a;
+#define VAD_MIN_ENERGY  100
+	long energy;
+
+
+	if (speechVolumeScale != 0.0f)
+	{	// Use speech waveform when speech is enabled
+		source_num = SPEECH_SOURCE;
+		// Step is picked experimentally. Using step of 1 sample at 11025Hz,
+		// because human speech is mostly in the low frequencies, and it looks
+		// better this way.
+		step = 1;
+
+	}
+	else if (musicVolumeScale != 0.0f)
+	{	// Use music waveform when speech is disabled
+		source_num = MUSIC_SOURCE;
+		// Step is picked experimentally. Using step of 4 samples at 11025Hz.
+		// It looks better this way.
+		step = 4;
+	}
+	else
+	{
+		return 0;
+	}
+
+	source = &soundSource[source_num];
+	LockMutex (source->stream_mutex);
+	if (!PlayingStream (source_num) || !source->sample
+			|| !source->sample->decoder || !source->sbuffer
+			|| source->sbuf_size == 0)
+	{	// We don't have data to return, oh well.
+		UnlockMutex (source->stream_mutex);
+		return 0;
+	}
+	decoder = source->sample->decoder;
+
+	assert (audio_GetFormatInfo (decoder->format, &channels, &sample_size));
+	full_sample = channels * sample_size;
+
+	// See how far into the buffer we should be now
+	played_time = GetTimeCounter () - source->sbuf_lasttime;
+	delta = played_time * decoder->frequency * full_sample / ONE_SECOND;
+	// align delta to sample start
+	delta = delta & ~(full_sample - 1);
+
+	if (delta < 0)
+	{
+		log_add (log_Debug, "GraphForegroundStream(): something is messed"
+				" with timing, delta %ld", delta);
+		delta = 0;
+	}
+	else if (delta > (long)source->sbuf_size)
+	{	// Stream decoder task has just had a heart attack, not much we can do
+		delta = 0;
+	}
+
+	// Step is in 11025 Hz units, so we need to adjust to source frequency
+	step = decoder->frequency * step / 11025;
+	if (step == 0)
+		step = 1;
+	step *= full_sample;
+
+	sbuffer = source->sbuffer;
+	pos = source->sbuf_offset + delta;
+
+	// We are not basing the scaling factor on signal energy, because we
+	// want it to *look* pretty instead of sounding nice and even
+	target_amp = (height >> 1) >> 1;
+	scale = avg_amp / target_amp;
+
+	max_a = 0;
+	energy = 0;
+	for (i = 0; i < width; ++i, pos += step)
+	{
+		sint32 s;
+		int t;
+
+		pos %= source->sbuf_size;
+
+		s = readSoundSample (sbuffer + pos, sample_size);
+		if (channels > 1)
+			s += readSoundSample (sbuffer + pos + sample_size, sample_size);
+
+		energy += (s * s) / 0x10000;
+		t = abs(s);
+		if (t > max_a)
+			max_a = t;
+
+		s = (s / scale) + (height >> 1);
+		if (s < 0)
+			s = 0;
+		else if (s > height - 1)
+			s = height - 1;
+		
+		data[i] = s;
+	}
+	energy /= width;
+
+	// Very basic VAD. We don't want to count speech pauses in the average
+	if (energy > VAD_MIN_ENERGY)
+	{
+		// Record the maximum amplitude (sort of)
+		frame_sum += max_a;
+		++frames;
+		if (frames == 8)
+		{	// Got a full page
+			frame_sum /= AGC_FRAME_COUNT;
+			// Record the page
+			page_sum -= pages[page_head];
+			page_sum += frame_sum;
+			pages[page_head] = frame_sum;
+			page_head = (page_head + 1) % AGC_PAGE_COUNT;
+
+			frame_sum = 0;
+			frames = 0;
+
+			avg_amp = page_sum / AGC_PAGE_COUNT;
+		}
+	}
+
+	UnlockMutex (source->stream_mutex);
+	return 1;
+}
+
