@@ -30,4 +30,6 @@ TFB_SoundTag* FindTaggedBuffer (TFB_SoundSample* sample, audio_Object buffer);
 void TFB_ClearBufferTag (TFB_SoundTag* ptag);
 void TFB_TagBuffer (TFB_SoundSample* sample, audio_Object buffer, void* data);
 
+int GraphForegroundStream (uint8 *data, sint32 width, sint32 height);
+
 #endif
